@@ -48,7 +48,10 @@ const static struct {
 	{ "XYMONSERVERCGIURL", "/xymon-cgi" },
 	{ "XYMONSERVERSECURECGIURL", "/xymon-seccgi" },
 	{ "XYMONNETWORK", "" },
+	{ "XYMONNETWORKS", "" },
+	{ "XYMONEXNETWORKS", "" },
 	{ "BBLOCATION", "" },
+	{ "TESTUNTAGGED", "FALSE" },
 	{ "PATH", "/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/local/sbin:"XYMONHOME"/bin" },
 	{ "DELAYRED", "" },
 	{ "DELAYYELLOW", "" },
