@@ -469,7 +469,7 @@ addtolist:
 	/* Do the alerts */
 	alert = (activealerts_t *)calloc(1, sizeof(activealerts_t));
 	alert->hostname = host->hostname;
-	alert->location = xmh_item(hinfo, XMH_ALLPAGEPATHS);
+	alert->pagepath = xmh_item(hinfo, XMH_ALLPAGEPATHS);
 	alert->ip = strdup("127.0.0.1");
 	alert->color = COL_RED;
 	alert->pagemessage = "";
