@@ -73,6 +73,8 @@ xymon (4.4.0-alpha1) unstable; urgency=low
      using the --metafilter option (rather than the entire message)
    * xymond_channel can now filter by exclusion with --ex(meta)filter. Messages
      matching that regex are silently discarded.
+   * Multiple targeted and excluded networks can be specified for xymonnet and
+     xymongrep using XYMONNETWORKS and XYMONEXNETWORKS variables in xymonserver.cfg
    
    * FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
      write) to xymonnet
